docs: implement professional bilingual documentation and data auditing markdown

--- a/analise_agricola.ipynb
+++ b/analise_agricola.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9Mhu8R3hQFZWeAx4ZO3Oq",
+      "authorship_tag": "ABX9TyNqHubIA9YEbYBRot+SvKPD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,52 +23,45 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Cleverson-Andrade/Cleverson-Andrade/blob/main/analise_agricola.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Cleverson-Andrade/agro-data-analysis/blob/main/analise_agricola.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Estudo de Caso: Análise de Produtividade Agrícola Global"
+        "### # 🌾 Estudo de Caso: Análise de Produtividade Agrícola Global / Case Study: Global Agricultural Yield Analysis\n",
+        "\n",
+        "### 🇧🇷 Resumo\n",
+        "Este projeto consiste em uma análise exploratória de dados (EDA) focada no setor de agronegócio. O objetivo é revisar técnicas de manipulação de dados em Python, preparando a base técnica para a atuação profissional em Ciência de Dados.\n",
+        "* **Fonte de Dados:** Dataset \"Crop Yield Prediction\" (Kaggle).\n",
+        "\n",
+        "### 🇺🇸 Overview\n",
+        "This project consists of an exploratory data analysis (EDA) focused on the agribusiness sector. The goal is to review data manipulation techniques in Python, strengthening the technical foundation for a Data Science career.\n",
+        "* **Data Source:** \"Crop Yield Prediction\" dataset (Kaggle)."
       ],
       "metadata": {
         "id": "0rxNYGYvOdeK"
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Este projeto consiste em uma análise exploratória de dados experimentais focada no setor de agronegócio. O objetivo é revisar técnicas de manipulação de dados em Python, preparando a base técnica para uma nova oportunidade profissional na área de Ciência de Dados com início em Fevereiro de 2026. Fonte de Dados: Dataset \"Crop Yield Prediction\" (Kaggle)."
-      ],
-      "metadata": {
-        "id": "fLueFrkeOqdy"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "import pandas as pd"
-      ],
-      "metadata": {
-        "id": "EP5GUPWGq1Ku"
-      },
-      "execution_count": 247,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# Importação de bibliotecas / Library imports\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Carregamento do dataset / Loading the dataset\n",
         "data = pd.read_csv('yield_df.csv')"
       ],
       "metadata": {
-        "id": "d0cLTtstrOaF"
+        "id": "e87JmHxbcFRt"
       },
-      "execution_count": 248,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Visualização inicial / Initial preview\n",
         "data.head()"
       ],
       "metadata": {
@@ -79,7 +72,7 @@
         "id": "ENYFvCGVr3ke",
         "outputId": "87359b52-3e3e-48b4-d9ab-f032abb34d48"
       },
-      "execution_count": 249,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,6 +277,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Inspeção de tipos e estrutura / Metadata and structure inspection\n"
+      ],
+      "metadata": {
+        "id": "HJYAdzw_cROT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "data.info()"
@@ -295,7 +297,7 @@
         "id": "DJV8u-ecsbGU",
         "outputId": "e31cb51e-5b6e-4656-90a0-009678852710"
       },
-      "execution_count": 250,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +334,7 @@
         "id": "0YHZbKrOs2LF",
         "outputId": "6661f38c-da89-4df5-b95f-96741bb13bcb"
       },
-      "execution_count": 251,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +360,7 @@
         "id": "gCYyOXZIs_ZU",
         "outputId": "da6bbb05-11dc-4e09-98d0-8372ced53a59"
       },
-      "execution_count": 252,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,17 +379,19 @@
     {
       "cell_type": "code",
       "source": [
+        "# Remoção de coluna desnecessária / Removing unnecessary column\n",
         "data.drop(columns = \"Unnamed: 0\", inplace = True)"
       ],
       "metadata": {
         "id": "d9lLg7hVtQ9V"
       },
-      "execution_count": 253,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Visualização do estado atual / Current state view\n",
         "data"
       ],
       "metadata": {
@@ -398,7 +402,7 @@
         "id": "f-ErGxdhuHV8",
         "outputId": "e836d733-cb5d-453d-ba82-5a6787d7834b"
       },
-      "execution_count": 254,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -729,6 +733,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Verificação de colunas / Checking columns\n",
         "data.columns"
       ],
       "metadata": {
@@ -738,7 +743,7 @@
         "id": "LSI5lXeyuOMM",
         "outputId": "5624f515-4fc9-4450-eb86-2a251e095d18"
       },
-      "execution_count": 255,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -757,6 +762,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Padronização de nomes (Snake Case) / Column renaming (Snake Case)\n",
         "data.rename (columns = {\"Area\" : \"country\",\n",
         "                        \"Item\" : \"crop\",\n",
         "                        \"Year\" : \"year\",\n",
@@ -768,7 +774,7 @@
       "metadata": {
         "id": "uSWxXQXHur8U"
       },
-      "execution_count": 256,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -784,7 +790,7 @@
         "id": "JiGmk9DgyyV0",
         "outputId": "8fb8b37b-826f-4974-d1e5-ed8571f5e40f"
       },
-      "execution_count": 257,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1128,6 +1134,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Tratamento de duplicatas / Handling duplicates\n",
         "data.duplicated().value_counts()"
       ],
       "metadata": {
@@ -1138,7 +1145,7 @@
         "id": "CnQsqBjOzeZb",
         "outputId": "c7db1ef6-d441-4f14-c177-ab7268e82b0c"
       },
-      "execution_count": 258,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1192,12 +1199,13 @@
     {
       "cell_type": "code",
       "source": [
+        "# Tratamento de duplicatas / Handling duplicates\n",
         "data.drop_duplicates(inplace = True)"
       ],
       "metadata": {
         "id": "Hil1LgKr1ZYz"
       },
-      "execution_count": 259,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1213,7 +1221,7 @@
         "id": "ThibY39X1elD",
         "outputId": "ac730937-f2b8-463a-d545-4741735e242c"
       },
-      "execution_count": 260,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1567,7 +1575,7 @@
         "id": "jNkxezkN11n7",
         "outputId": "9557e173-e5e3-458c-820e-319a7e0d4ed2"
       },
-      "execution_count": 261,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1867,12 +1875,13 @@
     {
       "cell_type": "code",
       "source": [
+        "# Reset de índice para manter integridade / Resetting index for data integrity\n",
         "data = data.reset_index().drop(columns=\"index\")"
       ],
       "metadata": {
         "id": "fwxVjC8y2kYb"
       },
-      "execution_count": 262,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1888,7 +1897,7 @@
         "id": "Ik5D_q9s2u0L",
         "outputId": "163c181f-0cb5-4cd5-f271-7d2963392228"
       },
-      "execution_count": 263,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2232,6 +2241,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Verificação de valores ausentes / Checking for missing values\n",
         "data.isna().sum()"
       ],
       "metadata": {
@@ -2242,7 +2252,7 @@
         "id": "JZescgVx28br",
         "outputId": "81a75742-4428-4f23-df66-d0ac7dc92c85"
       },
-      "execution_count": 264,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2321,7 +2331,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Use o groupby na coluna crop e calcule a média da produtividade (crop_yield_hg_per_ha). Qual cultura teve a maior média de produtividade histórica?"
+        "### 📊 Agrupamento e Médias / Grouping and Averages\n",
+        "**Pergunta / Question:** Qual cultura teve a maior média de produtividade histórica? / Which crop has the highest historical average yield?"
       ],
       "metadata": {
         "id": "Ke8uyjMvAD36"
@@ -2330,6 +2341,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Agrupamento por cultura / Grouping by crop\n",
         "produtividade_media = data.groupby(\"crop\")[\"crop_yield_hg_per_ha\"].mean().round(2).sort_values(ascending = False)\n",
         "print(produtividade_media)"
       ],
@@ -2340,7 +2352,7 @@
         "id": "q5IFTP1_9-oy",
         "outputId": "9352dfc7-26eb-4dc0-8765-8d8541298b78"
       },
-      "execution_count": 265,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2365,7 +2377,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Qual foi o ano (year) com a maior temperatura média (mean_air_temperature_c) registrada e qual foi a produtividade média global nesse ano específico?"
+        "### 🌡️ Análise de Extremos / Extremes Analysis\n",
+        "**Pergunta / Question:** Qual foi o ano com a maior temperatura média e qual a produtividade global desse ano? / What was the year with the highest average temperature and the global yield for that year?"
       ],
       "metadata": {
         "id": "QNtm5nFkDHPJ"
@@ -2384,7 +2397,7 @@
         "id": "FOkwJYgIDfa5",
         "outputId": "04eea9c3-7ff8-4b83-8588-718288680c32"
       },
-      "execution_count": 266,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2728,6 +2741,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Localização do valor máximo de temperatura / Locating max temperature value\n",
         "data.mean_air_temperature_c.max()"
       ],
       "metadata": {
@@ -2737,7 +2751,7 @@
         "id": "HHpiSeNWDzap",
         "outputId": "90248433-9809-4914-899c-e2609c5fa057"
       },
-      "execution_count": 267,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2754,6 +2768,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Filtragem do ano específico / Filtering the specific year\n",
         "data[data[\"mean_air_temperature_c\"] == 30.65]"
       ],
       "metadata": {
@@ -2764,7 +2779,7 @@
         "id": "OTx3GCdtHjA6",
         "outputId": "657dc738-3d27-4f03-d597-67b5e2d299e4"
       },
-      "execution_count": 268,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2988,6 +3003,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Média global de produtividade em 2013 / Global yield average in 2013\n",
         "data[data[\"year\"] == 2013][\"crop_yield_hg_per_ha\"].mean().round(2)"
       ],
       "metadata": {
@@ -2997,7 +3013,7 @@
         "id": "8C1eall2JSix",
         "outputId": "9716d8a5-1a9b-415e-c3d7-43e6d200fb3b"
       },
-      "execution_count": 272,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3014,17 +3030,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Crie um gráfico de linhas mostrando a evolução da produtividade média global ao longo dos anos (year)."
-      ],
-      "metadata": {
-        "id": "jVlkaLynLhc5"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Análise de Tendências e Relatórios\n",
-        "Criação de visualizações para entender a evolução da produtividade média global ao longo dos anos e identificação das culturas com maior rendimento histórico."
+        "### 📈 Análise de Tendências / Trend Analysis\n",
+        "**Objetivo / Goal:** Visualização da evolução da produtividade média global. / Visualizing global average yield evolution."
       ],
       "metadata": {
         "id": "f9khdQdBPM1w"
@@ -3038,25 +3045,26 @@
       "metadata": {
         "id": "sDgHYl_7LUTi"
       },
-      "execution_count": 273,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Agrupamento temporal / Time grouping\n",
         "produtividade_por_ano = (\n",
         "    data.groupby(\"year\")[\"crop_yield_hg_per_ha\"].mean().round(2))"
       ],
       "metadata": {
         "id": "RUdG-BHSLbxJ"
       },
-      "execution_count": 278,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "# Configuração do gráfico / Plot configuration\n",
         "plt.figure(figsize=(10,5))\n",
         "\n",
         "plt.plot(\n",
@@ -3078,7 +3086,7 @@
         "id": "TE23RkWSL6kw",
         "outputId": "76b051ce-cb27-475e-e257-27b3fa1e587b"
       },
-      "execution_count": 281,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3095,8 +3103,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Audição de Dados (Data Auditing)\n",
-        "Utilização de Boxplots e métodos estatísticos para identificar \"Outliers\" (dados fora da curva), simulando o processo de validação de experimentos de campo para garantir a integridade dos dados."
+        "### 🔍 Audição de Dados / Data Auditing\n",
+        "**Objetivo / Goal:** Identificação de Outliers para garantir integridade de experimentos. / Outlier identification to ensure experiment integrity."
       ],
       "metadata": {
         "id": "3CepQOkCPWZC"
@@ -3105,6 +3113,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Estatística descritiva / Descriptive statistics\n",
         "data.describe()"
       ],
       "metadata": {
@@ -3115,7 +3124,7 @@
         "id": "PNij7gHPNG3J",
         "outputId": "9dac96f9-3105-43fa-9048-e3e63d58efe0"
       },
-      "execution_count": 282,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3333,6 +3342,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Localização do recorde de produtividade / Locating the yield record\n",
         "data.loc[data['crop_yield_hg_per_ha'].idxmax()]"
       ],
       "metadata": {
@@ -3343,7 +3353,7 @@
         "id": "MDIOtm22NMWj",
         "outputId": "295e5539-fbee-4890-9ce2-e52ffc5eba50"
       },
-      "execution_count": 283,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3422,6 +3432,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Boxplot para detecção de anomalias / Boxplot for anomaly detection\n",
         "import seaborn as sns\n",
         "plt.figure(figsize=(12,6))\n",
         "sns.boxplot(x='crop', y='crop_yield_hg_per_ha', data=data)\n",
@@ -3437,7 +3448,7 @@
         "id": "1Et0R79xNPNY",
         "outputId": "e6c3c633-236d-482f-b953-0896c7929415"
       },
-      "execution_count": 284,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
